增加模型加载

--- a/DirectxSurface/DirectxSurface.vcxproj
+++ b/DirectxSurface/DirectxSurface.vcxproj
@@ -142,10 +142,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClInclude Include="myMath.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="myMath.h" />
+    <ClCompile Include="ObjLoad.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
